# intspector

./: Cargo.toml  readme.md
src/: lib.rs  main.rs  tests.rs
tests/: tests.rs
