[package]
name = "intspector"
version = "0.2.0"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
license= "MIT"
repository = "https://github.com/dmulholl/intspector"
description = "A command line integer conversion utility."

[dependencies]
term_size = "0.3"
arguably = { path = "../arguably", version = "0.1.0" }

