[package]
name = "intspector"
version = "0.4.3"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
license= "MIT"
repository = "https://github.com/dmulholl/intspector"
description = "A command line integer conversion utility."
homepage = "https://www.dmulholl.com/dev/intspector.html"

[dependencies]
term_size = "0.3"
arguably = "0.9"

